# numeric

./: .gitattributes  .travis.yml  LICENSE.md  README.md
coursework/: .gitignore  README.md  differential_equation.ipynb  integral.ipynb  linear system and spline.ipynb  linear system.ipynb  model.tex  requirements.txt
numeric-core/: CMakeLists.txt  README.md  core.hpp  cubic_spline.cpp  cubic_spline.hpp  differential_equation.cpp  function.hpp  gauss-kronrod.hpp  integral.cpp  interpolate.cpp  lambda.hpp  linear_system.cpp  machar.hpp  matrix.hpp  model.cpp  model_arguments.hpp  model_results.hpp  polynomial.cpp  polynomial.hpp  real.cpp  tabulate.cpp  tabulate_integral.cpp  tabulated.cpp  tabulated.hpp
numeric-core/extend_py/: CMakeLists.txt  numericmodule.cpp
numeric-web/: .gitignore  README.md  manage.py  package.json  requirements.txt  webpack.config.js
numeric-web/ads/: admin.py  docker.py  models.py  problems.py  tests.py  views.py
numeric-web/ads/migrations/: __init__.py
numeric-web/assets/js/: csrf.js  index.jsx  problem.jsx  problems.jsx  result.jsx
numeric-web/numeric_web/: celery.py  settings.py  urls.py  wsgi.py
numeric-web/templates/: index.html
numeric_logic/: .gitignore  CMakeLists.txt  tabulate.cpp  tabulate.hpp
numeric_logic/extend_py/: numericmodule.cpp
numeric_web/: .gitignore  README.md  manage.py  package.json  requirements.txt  webpack.config.js
numeric_web/ads/: apps.py  tests.py  views.py
numeric_web/numeric_web/: __init__.py  celery.py  settings.py
numeric_web/templates/: index.html
test/: .gitignore  coursework.py  requirements.txt
